# rusty_socket

./: .gitignore  Cargo.toml  README.md
example/client/: Cargo.toml
example/client/src/: commands.rs  main.rs
example/server/: Cargo.toml  websocket.html
example/server/src/: main.rs
rusty_socket_client/: Cargo.toml
rusty_socket_client/src/: errors.rs  lib.rs  socket_client.rs  url.rs  utils.rs
rusty_socket_client/tests/: url_tests.rs
rusty_socket_core/: Cargo.toml
rusty_socket_core/src/: connection_status.rs  dataframe.rs  errors.rs  lib.rs  opcode.rs  utils.rs
rusty_socket_core/src/handshake/: connection_status.rs  mod.rs  request_line.rs  response_line.rs
rusty_socket_core/tests/: dataframe_test.rs  opcode_test.rs
rusty_socket_server/: Cargo.toml
rusty_socket_server/src/: connection.rs  connections.rs  errors.rs  lib.rs  socket_server.rs
rusty_socket_server/src/handshake/: mod.rs  request_line.rs  response_line.rs
