[package]
name = "rusty_socket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
cryptography = { workspace = true }
rusty_socket_core = { path = "../rusty_socket_core" }